<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:background="#F3E3CD"
        android:gravity="center"
        android:text="@string/header"
        android:textColor="@color/purple_700"
        android:textSize="@dimen/large_text_size"
        android:textStyle="bold" />


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="#F3E3CD"
        android:gravity="center"
        android:text="@string/footer"
        android:textColor="@color/purple_700"
        android:textSize="@dimen/large_text_size"
        android:textStyle="bold" />

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true">

        <Button
            android:id="@+id/btn1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_margin="@dimen/large_text_size"
            android:text="@string/first" />

        <Button
            android:id="@+id/btn2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/large_text_size"
            android:layout_toEndOf="@+id/btn1"
            android:text="@string/second" />

        <Button
            android:id="@+id/btn3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/btn1"
            android:layout_alignParentLeft="true"
            android:layout_centerHorizontal="true"
            android:layout_margin="@dimen/large_text_size"
            android:text="@string/third" />

        <Button
            android:id="@+id/btn4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/btn2"
            android:layout_margin="@dimen/large_text_size"
            android:layout_toEndOf="@+id/btn3"
            android:text="@string/fourth" />

    </RelativeLayout>


</RelativeLayout>