<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="3">

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/section_1"
        android:layout_weight="1"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/section_2"
        android:layout_weight="1"
        android:backgroundTint="#4A0065"/>


    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/section_3"
        android:layout_weight="1"
        android:backgroundTint="#FF0051"/>

</LinearLayout>