<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/header_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/purple_700"
        android:gravity="center"
        android:text="@string/header"
        android:textColor="@color/white"
        android:textSize="@dimen/large_text_size"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/footer_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/purple_700"
        android:gravity="center"
        android:text="@string/footer"
        android:textColor="@color/white"
        android:textSize="@dimen/large_text_size"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/first"
        app:layout_constraintStart_toEndOf="@+id/guideline_horizontal_start"
        app:layout_constraintTop_toBottomOf="@+id/guideline_vertical_start" />


    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/second"
        app:layout_constraintEnd_toStartOf="@+id/guideline_horizontal_end"
        app:layout_constraintTop_toBottomOf="@+id/guideline_vertical_start" />


    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/third"
        app:layout_constraintBottom_toTopOf="@+id/guideline_vertical_end"
        app:layout_constraintStart_toEndOf="@+id/guideline_horizontal_start" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fourth"
        app:layout_constraintBottom_toTopOf="@+id/guideline_vertical_end"
        app:layout_constraintEnd_toStartOf="@+id/guideline_horizontal_end" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_horizontal_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.2" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_horizontal_end"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.8" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_vertical_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.4" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_vertical_end"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.6" />


</androidx.constraintlayout.widget.ConstraintLayout>